--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
         </div>
       </div>
       <p class="lead">
-        I spent the first 23 years of my life wanting to do better at wherever i find myself.
-        When i finished my Bachelor's degree in 2018 and now i'm currently serving the nation, i had different ideas about myself.
-        After succesful rechanelization of basic computer skills, I am <b>CODING</b>.
+        I have had different ideas about myself but after a succesful rechanelization of basic computer skills, I am <b>CODING</b>.
       </p>
 	   </div>  
 		<div class="row col-md-12 m-auto">
