--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="work-img">
               <img src="img/Screenshot (124).png" alt="" class="img-responsive">
             </div>
-            <div class="work-content">
+            <div class="work-content mt-2">
               <div class="row">
                 <div class="col-sm-12 text-center">
                   <h2>Rentage24</h2>
@@ -180,15 +180,15 @@
   		</div>
   		<div class="col-md-4 text-center">
   			<div class="works">
-          <a href="https://manuelbiolatiri.github.io/rental/">
+          <a href="https://manuelbiolatiri.github.io/IBMAboutPage/">
             <div class="work-img">
-              <img src="img/Screenshot (124).png" alt="" class="img-responsive">
+              <img src="img/Screenshot (136).png" alt="" class="img-responsive">
             </div>
-            <div class="work-content">
+            <div class="work-content mt-2">
               <div class="row">
                 <div class="col-sm-12 text-center">
-                  <h2>Rentage24</h2>
-                    <p>Web Development</p>
+                  <h2>About IBM</h2>
+                    <p>Web Design</p>
                 </div>
               </div>
             </div>
@@ -201,7 +201,7 @@
             <div class="work-img">
               <img src="img/Screenshot (124).png" alt="" class="img-responsive">
             </div>
-            <div class="work-content">
+            <div class="work-content mt-2">
               <div class="row">
                 <div class="col-sm-12 text-center">
                   <h2>Rentage24</h2>
