--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="text-center s-description">
           <h2>Graphic Design</h2>
           <p class="text-center">
-            I create visual concepts, using <b>figma</b>, to communicate ideas that inspire and captivate consumers. I develop the overall layout and production design for e-flyers and logos.
+            I create visual concepts, using <b>Figma</b>, to communicate ideas that inspire and captivate consumers. I develop the overall layout and production design for e-flyers and logos.
           </p>
         </div>
       </div>
@@ -165,7 +165,7 @@
   			<div class="works">
           <a href="https://manuelbiolatiri.github.io/rental/">
             <div class="work-img">
-              <img src="img/Screenshot (124).png" alt="" class="img-responsive">
+              <img src="img/Screenshot (124).png" alt="Rentage24" class="img-responsive">
             </div>
             <div class="work-content mt-2">
               <div class="row">
@@ -182,7 +182,7 @@
   			<div class="works">
           <a href="https://manuelbiolatiri.github.io/IBMAboutPage/">
             <div class="work-img">
-              <img src="img/Screenshot (136).png" alt="" class="img-responsive">
+              <img src="img/Screenshot (136).png" alt="IBMAboutPage" class="img-responsive">
             </div>
             <div class="work-content mt-2">
               <div class="row">
@@ -197,15 +197,15 @@
   		</div>
   		<div class="col-md-4 text-center">
   			<div class="works">
-          <a href="https://manuelbiolatiri.github.io/rental/">
+          <a href="https://www.figma.com/file/3scEMDYJaTy37QHN2jYJWT/lambda?node-id=0%3A1">
             <div class="work-img">
-              <img src="img/Screenshot (124).png" alt="" class="img-responsive">
+              <img src="img/Screenshot (147).png" alt="ux Prototype" class="img-responsive">
             </div>
             <div class="work-content mt-2">
               <div class="row">
                 <div class="col-sm-12 text-center">
-                  <h2>Rentage24</h2>
-                    <p>Web Development</p>
+                  <h2>Prototype</h2>
+                    <p>UI/UX Design</p>
                 </div>
           
               </div>
