--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
           <i class="fa fa-tv"></i>
           </div>
           <div class="text-center s-description">
-            <h2>Web Design</h2>
+            <h2>Frontend</h2>
             <p class="text-center">
-              I design the web with HTML5, CSS3 and Bootstrap 4. I can as well be your UI/UX designer, I sketch and wireframe interfaces focusing on user interface, user experience and content structure.
+              I design the web with HTML5, CSS3, Bootstrap 4 and React. I can as well be your UI/UX designer, I sketch and wireframe interfaces focusing on user interface, user experience and content structure.
             </p>
         </div>
       </div>
@@ -130,9 +130,9 @@
             <i class="fa fa-database"></i>
           </div>
           <div class="text-center s-description">
-            <h2>Back-end</h2>
+            <h2>Backend</h2>
             <p class="text-center">
-              I Work with PHP and MYSQL database on the backend to create dynamic websites.
+              I Work with PHP, Nodejs and MYSQL database on the backend to create dynamic websites with great functionalities.
             </p>
         </div>
       </div>
@@ -171,7 +171,7 @@
               <div class="row">
                 <div class="col-sm-12 text-center">
                   <h2>Rentage24</h2>
-                    <p>Web Development</p>
+                    <p>Web Development | PHP</p>
                 </div>
               </div>
             </div>
@@ -180,15 +180,15 @@
   		</div>
   		<div class="col-md-4 text-center">
   			<div class="works">
-          <a href="https://manuelbiolatiri.github.io/IBMAboutPage/">
+          <a href="https://https://detectmyfaceapp.herokuapp.com/">
             <div class="work-img">
-              <img src="img/Screenshot (136).png" alt="IBMAboutPage" class="img-responsive">
+              <img src="img/Annotation 2020-06-18 212134.png" alt="Detectmyfaceapp" class="img-responsive">
             </div>
             <div class="work-content mt-2">
               <div class="row">
                 <div class="col-sm-12 text-center">
-                  <h2>About IBM</h2>
-                    <p>Web Design</p>
+                  <h2>Detectmyface</h2>
+                    <p>Web Development | React</p>
                 </div>
               </div>
             </div>
@@ -205,7 +205,7 @@
               <div class="row">
                 <div class="col-sm-12 text-center">
                   <h2>Prototype</h2>
-                    <p>UI/UX Design</p>
+                    <p>UI/UX Design | Figma</p>
                 </div>
           
               </div>
