--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
         </div>
       </div>
-      <p class="lead">
+      <p class="lead m-auto">
         I have had different ideas about myself but after a succesful rechanelization of basic computer skills, I am <b>CODING</b>.
       </p>
 	   </div>  
@@ -305,7 +305,9 @@
       <!-- Social buttons ends -->
 
       <!-- copyright -->
-    <p class="text-white">Made by &copy; <strong>Emmanuel Biolatiri</strong> 2019</p>
+    <div class="container mt-3">
+        <p class="text-white text-center">Made by &copy; <strong>Emmanuel Biolatiri</strong> 2019</p>
+    </div>
   </footer>
 </section>
 <!-- footer ends-->
