add nodejs logo

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <h5>Bootstrap 4</h5>
           </div>
           <div class="col-md-3 col-sm-6">
-            <img src="img/js-icon.png" width="150px" height="150px">
-            <h5>Javascript</h5>
+            <img src="img/nodejs-logo.png" width="150px" height="150px">
+            <h5>Nodejs</h5>
           </div>
         </div>
         <div class="row col-md-12 col-sm-12 text-center">
