--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   		</div>
   		<div class="col-md-4 text-center">
   			<div class="works">
-          <a href="https://https://detectmyfaceapp.herokuapp.com/">
+          <a href="https://detectmyfaceapp.herokuapp.com/">
             <div class="work-img">
               <img src="img/Annotation 2020-06-18 212134.png" alt="Detectmyfaceapp" class="img-responsive">
             </div>
